# neovide

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml
src/window/: keyboard_manager.rs  mod.rs
