[package]
name = "neovide"
version = "0.9.0"
authors = ["keith <keith@the-simmons.net>"]
edition = "2018"
build = "build.rs"
description = "Neovide: No Nonsense Neovim Gui"
repository = "https://github.com/neovide/neovide"
resolver = "2"

[workspace]
members = ["neovide-derive"]

[features]
default = []
embed-fonts = []

[dependencies]
arboard = "2.1.1"
async-trait = "0.1.56"
cfg-if = "1.0.0"
clap = { version = "3.2.5", features = ["cargo"] }
derive-new = "0.5.9"
dirs = "4.0.0"
euclid = "0.22.7"
flexi_logger = { version = "0.22.5", default-features = false }
futures = "0.3.21"
gl = "0.14.0"
glutin = { git = "https://github.com/barklan/glutin", branch = "barklan", features = ["serde"] }
image = { version = "0.24.2", default-features = false, features = ["ico"] }
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.7"
neovide-derive = { path = "neovide-derive" }
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", branch = "master", features = ["use_tokio"] }
parking_lot = "0.12.1"
pin-project = "1.0.10"
rand = "0.8.5"
rmpv = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
swash = "0.1.4"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["compat"] }
unicode-segmentation = "1.9.0"
which = "4.2.5"
winit = { git = "https://github.com/maroider/winit", branch = "new-keyboard-linux" }
xdg = "2.4.1"

[dev-dependencies]
mockall = "0.11.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(linux)'.dependencies.skia-safe]
features = ["gl", "egl"]
version = "0.50.0"

[target.'cfg(not(linux))'.dependencies.skia-safe]
features = ["gl"]
version = "0.50.0"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "Neovide"
identifier = "com.neovide.neovide"
icon = ["assets/neovide.ico"]
version = "0.9.0"
resources = []
copyright = "Copyright (c) Keith 2021. All rights reserved."
category = "Productivity"
short_description = "A simple GUI for Neovim."
long_description = """
This is a simple graphical user interface for Neovim. Where possible there are some graphical improvements, but it should act functionally like the terminal UI.
"""
osx_minimum_system_version = "10.11"
